[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Justin Forsyth <justin@forsyth.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
num-integer = "0.1.42"
num-traits = "0.2.11"